# ecbuild

./: .gitignore  .readthedocs.yml  AUTHORS  CMakeLists.txt  INSTALL  INSTALL.rst  LICENSE  NOTICE  README.rst  VERSION  VERSION.cmake  ecbuild-post-import.cmake.in  ecbuild.sublime-project  ecbuild_3.0_release_notes.rst  ecbuild_3.4_release_notes.rst  project_summary.cmake
doc/: CMakeLists.txt  cmake.py  conf.py  conf.py.in  contrib.rst  create.py  find.rst  generate.py  upload.py
doc/src/: index.rst  macros.rst
doc/templates/: layout.html
examples/ECBUILD-398-cmake3-issues/projectA/: CMakeLists.txt  libraryA_Private.cc
examples/ECBUILD-398-cmake3-issues/projectB/: CMakeLists.txt  libraryB.cc  libraryB.h  projectb-import.cmake.in
examples/ECBUILD-398-cmake3-issues/projectC/: CMakeLists.txt
examples/boost-python-lib/: CMakeLists.txt  README.md  mypython.py
examples/config-bundle/: CMakeLists.txt  README.md  general_config.cmake  subproj2_config.cmake
examples/config-bundle/subproj1/: CMakeLists.txt
examples/config-bundle/subproj2/: CMakeLists.txt
examples/cpp-bundle-nested/: CMakeLists.txt  README.md
examples/cpp-bundle-nested/bar/: CMakeLists.txt  bar.c  main.cc  test.cc
examples/cpp-bundle-nested/baz/: CMakeLists.txt  baz.c  baz.h  main.cc  test.cc
examples/cpp-bundle/bar/: CMakeLists.txt  bar.h  baz.c  main.cc  test.cc  zingo.c  zingo.h
examples/cpp-bundle/foo/: CMakeLists.txt  test.cc
examples/cpp/boost-python-lib/: CMakeLists.txt  pythonlib.cpp  pythonlib.hpp
examples/cxx11/: CMakeLists.txt  README.md  VERSION.cmake  compute.cc
examples/fortran/: CMakeLists.txt  README.md  area_circle.h  circle.f90  constants.f90  lolo.f95  main.F90
examples/fortran-compile-options/: CMakeLists.txt  main.F90
examples/fortran/cmake/: fcm-make-interfaces.cfg
examples/fortran/utility/: utils.F90
examples/mix/: CMakeLists.txt  README.md  flags.json
examples/mix/cpp/: CMakeLists.txt  foo.cc  main.cxx
examples/mix/fort/: CMakeLists.txt  baz.f90
examples/override-compile-flags/foo/: CMakeLists.txt  flags-cray-8.4.1-debug.json  flags-cray-8.4.1-release.json  flags-cray-debug.json  flags-cray-release.json  flags.cmake  foo.f90  foo_contiguous.f90  foo_intolerant.f90  foo_ivybridge.f90  foo_no_debug_symbols.f90
examples/simple/: CMakeLists.txt  README.md  project_summary.cmake
examples/simple/circle/: CMakeLists.txt  area.f90  test_area.c
examples/simple/compute/: CMakeLists.txt  compute.cc
examples/transitive-dependencies/projectB/: CMakeLists.txt
examples/transitive-dependencies/projectC/: CMakeLists.txt  libraryC.cc  main.cc
regressions/ECBUILD_399/ld-origin/: CMakeLists.txt
regressions/ECBUILD_401/projectA/: CMakeLists.txt  libraryA.cc  libraryA.h
regressions/ECBUILD_401/projectB/: CMakeLists.txt  main.cc
share/: CMakeLists.txt  ecmwf_license_header.txt
share/ecbuild/check_linker/: CMakeLists.txt
share/ecbuild/find_package/: build.sh  find_lapack_MKL.sh
share/ecbuild/toolchains/: ecmwf-XC30-Cray.cmake  ecmwf-XC30-GNU.cmake  ecmwf-XC30-Intel.cmake
tests/: CMakeLists.txt
tests/bundle_options/: CMakeLists.txt  configure.sh
tests/bundle_options/projx/: CMakeLists.txt
tests/bundle_override_features/: CMakeLists.txt  run-test.sh.in
tests/bundle_override_features/bundle/: CMakeLists.txt
tests/bundle_subdir/: CMakeLists.txt  run-test.sh.in
tests/bundle_subdir/mybundle/: CMakeLists.txt
tests/bundle_subdir/mylib.in/: CMakeLists.txt  mylib-import.cmake.in
tests/bundle_subproj/: CMakeLists.txt  run-test.sh.in
tests/bundle_subproj/mybundle/: CMakeLists.txt
tests/ecbuild_add_flags/: CMakeLists.txt  run-test.sh.in  test_ecbuild_add_flags.cmake
tests/ecbuild_add_option/: CMakeLists.txt  build-and-run.sh
tests/ecbuild_add_option/test_project/: CMakeLists.txt
tests/ecbuild_add_option_multiproject_defaults/: CMakeLists.txt  clean.sh  configure.sh
tests/ecbuild_add_option_multiproject_defaults/test_project/: CMakeLists.txt
tests/ecbuild_find_package/: CMakeLists.txt  README.md  build-and-run.sh  clean.sh
tests/ecbuild_find_package/projectA/: CMakeLists.txt  libraryA.cc  libraryA.h  libraryA_Private.cc  projecta-import.cmake.in
tests/ecbuild_find_package/projectB/: CMakeLists.txt  libraryB.cc  projectb-import.cmake.in
tests/ecbuild_find_package/projectC/: CMakeLists.txt  libraryC.cc  libraryC.h
tests/ecbuild_find_python/: CMakeLists.txt  configure.sh
tests/ecbuild_install_dependency_with_soversion/: CMakeLists.txt  run-test.sh
tests/ecbuild_override_compiler_flags/: CMakeLists.txt  compiler_flags.cmake  run-test.sh.in  test_ecbuild_override_compiler_flags.cmake
tests/ecbuild_override_compiler_flags_bailout/: CMakeLists.txt  compiler_flags.cmake  emptyfile.F90  run-test.sh.in  test_ecbuild_override_compiler_flags_bailout.cmake
tests/ecbuild_regex_escape/: CMakeLists.txt  test_ecbuild_regex_escape.cmake
tests/ecbuild_remove_fortran_flags/: CMakeLists.txt  test_ecbuild_remove_fortran_flags.cmake
tests/ecbuild_shared_libs/: CMakeLists.txt  build-and-run.sh  clean.sh
tests/ecbuild_source_flags/: CMakeLists.txt  flags-sourceflags.json  test_ecbuild_source_flags.cmake
tests/ecbuild_string/: CMakeLists.txt  test_string.cmake
tests/find_ecbuild/: CMakeLists.txt  run-test.sh.in  test-CMakeLists.txt
tests/interface_library/: .gitignore  CMakeLists.txt  build-and-run.sh  clean.sh
tests/project_import/: CMakeLists.txt  run-test.sh.in
tests/project_options/: CMakeLists.txt  configure.sh
tests/project_options_cached/: CMakeLists.txt  configure.sh
tests/project_options_cached_multiproject/: CMakeLists.txt  configure.sh
tests/project_summary/: CMakeLists.txt  configure.sh
tests/sg_pl/: CMakeLists.txt  run-test.sh.in  test_sg_pl.h
tests/test_custom_build_type/: CMakeLists.txt  build-and-run.sh  toolchain.cmake
tests/test_properties/: CMakeLists.txt  build-and-run.sh
tests/test_requires_complex/: CMakeLists.txt  build-and-run.sh
tests/test_requires_simple/: CMakeLists.txt  build-and-run.sh
tools/: CMakeLists.txt  apply_license.sh  check_install.sh  git-mproj  license.pl  sg.pl
(+422 files in other folders)
